--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -16,3 +16,13 @@ jobs:
 
       - name: Step2
         run: echo Step 2!
+
+  job2:
+    name: Cowsays
+    runs-on: ubuntu-latest
+    steps:
+    - name: Ship it
+      uses: mscoutermarsh/cowsays-action@master
+      with:
+        text: 'WTH is awesome!'
+        color: 'cyan'
