--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -5,7 +5,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  # This workflow contains a single job called "build"
   job1:
     runs-on: ubuntu-latest
 
@@ -19,6 +18,7 @@ jobs:
 
   job2:
     name: Cowsays
+    needs: job1
     runs-on: ubuntu-latest
     steps:
     - name: Ship it
