--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -1,8 +1,10 @@
 name: first-workflow
 
-# Controls when the workflow will run
 on:
   workflow_dispatch:
+
+  issues:
+    types [opened]
 
 jobs:
   job1:
