--- a/.github/workflows/dotnet-acr.yml
+++ b/.github/workflows/dotnet-acr.yml
@@ -35,7 +35,8 @@ jobs:
       run: dotnet test --no-build --verbosity normal ./Application/tests/RazorPagesTestSample.Tests/RazorPagesTestSample.Tests.csproj
       
   dockerBuildPush:
-    
+
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -60,3 +61,25 @@ jobs:
       
     - name: Docker Push
       run: docker push $registryName/$repositoryName:$tag
+
+  deploy-to-dev:
+
+      runs-on: ubuntu-latest
+      needs: dockerBuildPush
+
+      environment:
+        name: dev
+        url: https://l3rzfzbcorj34-dev.azurewebsites.net/
+
+      steps:
+        - name: 'Login via Azure CLI'
+          uses: azure/login@v1
+          with:
+            creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
+  
+        - uses: azure/webapps-deploy@v2
+          with:
+            app-name: 'l3rzfzbcorj34-dev'
+            images: ${{secrets.ACR_NAME}}/wth/razorcore:${{github.run_number}}
+  
+      
